# javelin-examples

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini  run.sh
colored/: app.hpp
common/: CMakeLists.txt  application.hpp  default_framebuffer_set.hpp  imgui.cpp
features/: CMakeLists.txt  features.cpp  fire.frag  main.cpp
ire/compute/: app.hpp  fragment.dot  vertex.dot
ire/meshlet/: main.cpp
ire/ngf/: shaders.cpp
ire/normals/: app.hpp  shaders.hpp
ire/palette/: main.cpp  shaders.cpp
ire/particles/: app.hpp  shaders.cpp
ire/pathtracing/: main.cpp
ire/raytracing/: main.cpp  shaders.cpp
material/: CMakeLists.txt  main.cpp
meshlet/: shaders.cpp
ngf/: main.cpp
normals/: app.hpp  main.cpp  shaders.cpp
palette/: app.hpp
pathtracing/: shaders.cpp
prototype/: main.cpp  shaders.hpp
